<resources>
    <string name="app_name">MeuLupus</string>
    <string name="title_activity_side_menu">SideMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="nuvem_de_palavras">Nuvem de Palavras</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="o_que_lupus">O que é Lúpus?</string>
    <string name="o_que_causa_lupus">O que causa Lúpus?</string>
    <string name="como_e_diagnosticado">Como é diagnosticado?</string>
    <string name="como_afeta_corpo">Como o Lúpus afeta o corpo?</string>
    <string name="como_vou_melhorar">Como vou melhorar?</string>
    <string name="como_sera_dia_a_dia">Como será meu dia-a-dia?</string>
    <string name="login">Login</string>
    <string name="card_dentro_activity">Card dentro da activity</string>
    <string name="card_dentro_activity2">OUTRO card dentro da activity</string>
    <string name="title_topic1">O que é Lúpus?\n</string>
    <string name="title_topic2">O que causa Lúpus?\n</string>
    <string name="title_topic3">Como é diagnosticado?\n</string>
    <string name="title_topic3_friendly">Como é diagnos- ticado?\n</string>
    <string name="title_topic4">Como o Lúpus afeta meu corpo?\n</string>
    <string name="title_topic4_friendly">Como afeta meu corpo?\n</string>
    <string name="title_topic5">Como vou melhorar?\n</string>
    <string name="title_topic6">Como será meu dia-a-dia?\n</string>
    <string name="title_topic3_1">Critérios da Sociedade Americana de Reumatologia\n</string>
    <string name="title_topic3_2">FAN - Fator antinuclear\n</string>
    <string name="title_topic3_3">Outros Exames\n</string>
    <string name="title_topic4_1">Riscos aos órgãos internos\n</string>
    <string name="title_topic4_2">Fadiga\n</string>
    <string name="title_topic4_3">Vermelhidão\n</string>
    <string name="title_topic4_4">Sensibilidade à luz\n</string>
    <string name="title_topic4_5">Perda de Cabelo\n</string>
    <string name="title_topic5_1">Orientações gerais e tratamento\n</string>
    <string name="title_topic5_2">Anti-inflamatórios, Corticoides e Imunosupressores\n</string>
    <string name="title_topic5_3">Medicamentos e efeitos colaterais\n</string>
    <string name="title_topic5_4">Comparecimento às consultas e exames\n</string>
    <string name="title_topic5_5">O que fazer se eu piorar?\n</string>
    <string name="title_topic6_1">Visitas ao médico\n</string>
    <string name="title_topic6_2">Dieta\n</string>
    <string name="title_topic6_3">Exercícios\n</string>
    <string name="title_topic6_4">Influência na Gravidez / Fertilidade\n</string>
    <string name="title_topic6_5">Vacinas\n</string>
    <string name="title_topic6_6">Evitar infecções\n</string>
    <string name="title_topic6_7">Álcool, drogas, cigarro e saúde sexual\n</string>
    <string name="title_about">Sobre o Lupi\n</string>
    <string name="title_card_topic1">O que é Lúpus?</string>
    <string name="title_card_topic2">O que causa Lúpus?</string>
    <string name="title_card_topic3">Como é diagnosticado?</string>
    <string name="title_card_topic4">Como o Lúpus afeta meu corpo?</string>
    <string name="title_card_topic5">Como vou melhorar?</string>
    <string name="title_card_topic6">Como será meu dia-a-dia?</string>
    <string name="title_card_topic3_1">Critérios da Sociedade Americana de Reumatologia</string>
    <string name="title_card_topic3_2">FAN - Fator antinuclear</string>
    <string name="title_card_topic3_3">Outros Exames</string>
    <string name="title_card_topic4_1">Riscos aos órgãos internos</string>
    <string name="title_card_topic4_2">Fadiga</string>
    <string name="title_card_topic4_3">Vermelhidão</string>
    <string name="title_card_topic4_4">Sensibilidade à luz</string>
    <string name="title_card_topic4_5">Perda de Cabelo</string>
    <string name="title_card_topic5_1">Orientações gerais e tratamento</string>
    <string name="title_card_topic5_2">Anti-inflamatórios, Corticoides e Imunosupressores</string>
    <string name="title_card_topic5_3">Medicamentos e efeitos colaterais</string>
    <string name="title_card_topic5_4">Comparecimento às consultas e exames</string>
    <string name="title_card_topic5_5">O que fazer se eu piorar?</string>
    <string name="title_card_topic6_1">Visitas ao médico</string>
    <string name="title_card_topic6_2">Dieta</string>
    <string name="title_card_topic6_3">Exercícios</string>
    <string name="title_card_topic6_4">Influência na Gravidez / Fertilidade</string>
    <string name="title_card_topic6_5">Vacinas</string>
    <string name="title_card_topic6_6">Evitar infecções</string>
    <string name="title_card_topic6_7">Álcool, drogas, cigarro e saúde sexual</string>
    <string name="topic1_par1">
        Todos nós temos no nosso corpo um sistema imunológico, que é conjunto de células que servem
        para nos defender de vários tipos de doença, causadas por invasores externos ou
        adversidades.\n
    </string>
    <string name="topic1_par2">
        O Lúpus Eritematoso Sistêmico é uma doença considerada uma doença autoimune, na qual o sistema
        imunológico se torna mais ativo do que o normal, atacando células saudáveis do corpo. Esse
        nome “Lúpus” vem do latim, desde a antiguidade, porque às vezes as feridas que a doença
        ocasiona na pele se parecem com as mordidas de um lobo.\n
    </string>
    <string name="topic1_par3">
        Pacientes com Lúpus podem ter vermelhidões na pele, dores e inchaço articulares, cansaço e
        inflamações em diferentes órgãos internos. Essas inflamações devem ser tratadas o mais cedo
        possível para evitar danos permanentes.\n
    </string>
    <string name="topic1_par4">
        Lúpus é uma doença crônica, o que significa que ela não tem cura; de intensidade variável,
        às vezes causando mais mal estar (período ativo) e às vezes adormecida (período remissivo).
        Porém, seguindo as orientações evita-se que a doença se manifeste de formas agressivas, e
        pacientes podem viver suas vidas normalmente.\n
    </string>
    <string name="topic2_par1">
        Os pesquisadores ainda estão estudando o que faz com que o sistema imunológico de algumas
        pessoas se comporte atingindo tecidos saudáveis. Muitos cientistas acreditam que o Lúpus é
        uma resposta a uma série de fatores que incluem os <b>hormônios</b>, a <b>genética</b> e o
        <b>ambiente</b> de uma pessoa.\n
    </string>
    <string name="topic2_par2">
        <b>Hormônios</b> são os mensageiros do corpo, que promovem o funcionamento das células e dos
        órgãos.\n
    </string>
    <string name="topic2_par3">
        <b>Genética</b> é o código, herdado de nossos pais, presente em todas as nossas células que,
        por exemplo, define a cor dos nossos olhos ou nosso tipo sanguíneo, e influencia de maneira
        importante na nossa altura e muitas outras características do nosso corpo, incluindo nossa
        propensão a desenvolver certas doenças como o Lúpus.\n
    </string>
    <string name="topic2_par4">
        Fatores <b>ambientais</b> como a exposição aos raios UV da luz solar e alguns medicamentos
        podem ser agentes que incentivam o desenvolvimento do Lúpus. Agentes infecciosos como os
        vírus, fumo, poluição, alimentação e estresse também são fatores coadjuvantes.\n
    </string>
    <string name="topic2_par5">
        Assim, vários fatores podem fazer com que o Lúpus se desenvolva no corpo, mas nada que alguém
        faz ou deixa de fazer causa o Lúpus. É importante saber que o Lúpus não é contagioso, não foi
        “pego” de alguém, nem será transmitido para outra pessoa.\n
    </string>
    <string name="topic3_par1">
        Lúpus pode ser difícil de diagnosticar, alguns sintomas comuns são: vermelhidão na região do
        nariz e nas maçãs do rosto ou bochechas abaixo dos olhos, cansaço, febre, perda de apetite,
        perda de peso e dores e inflamação nas articulações.\n
    </string>
    <string name="topic3_par2">
        Não existe um exame específico que comprove o diagnóstico de Lúpus. Para diagnosticar a
        doença é necessário fazer uma série de exames e o paciente deve ter sintomas ou exames
        laboratoriais que se encaixam em critérios da Sociedade Americana de Reumatologia.\n
    </string>
    <string name="topic3_par3">
        Uma vez a doença diagnosticada, seu médico vai poder te explicar como você pode se sentir
        melhor, e indicar os remédios que irá precisar.\n
    </string>
    <string name="topic3_1_par1">
        Como o Lúpus pode se manifestar de formas diferentes em cada indivíduo, e como não existe um
        exame que define por si só quem possui a doença, a Sociedade Americana de Reumatologia
        elencou os sintomas mais comuns que podem indicar que o paciente tem Lúpus.\n
    </string>
    <string name="topic3_1_par2">
        Os critérios são:\n
    </string>
    <string name="topic3_1_par3">
        - vermelhidão na região do nariz e bochechas\n\n
        - vermelhidões na pele\n\n
        - fotossensibilidade (sensibilidade ao sol)\n
    </string>
    <string name="topic3_1_par4">
        - feridas no céu da boca\n\n
        - inflamação nas articulações (artrite)\n\n
        - inflamação nos tecidos em volta do pulmão ou do coração (pleurite ou pericardite)\n\n
        - problemas nos rins (sangue ou proteína na urina)\n\n
        - problemas neurológicos (convulsões ou alterações psiquiátricas)\n\n
        - alterações imunológicas (presença de alguns anticorpos)\n\n
        - resultado positivo no exame de FAN (fatores antinucleares)\n
    </string>
    <string name="topic3_2_par1">
        O exame de fatores antinucleares é um exame normalmente solicitado para pacientes com
        suspeita de doenças autoimunes.\n
    </string>
    <string name="topic3_2_par2">
Em condições normais, quando nosso organismo é atacado por invasores o sistema imunológico responde
        produzindo anticorpos para combatê-los. Quando uma pessoa tem uma doença autoimune, o
        organismo age de forma inapropriada e passa a produzir anticorpos contra as células de
        tecidos saudáveis.\n
    </string>
    <string name="topic3_2_par3">
        O FAN é um desses autoanticorpos que são produzidos nas doenças autoimunes. A grande maioria
        dos pacientes de Lúpus possui FAN positivo, porém é possível ter Lúpus e ser negativo no
        teste de fatores antinucleares.\n
    </string>
    <string name="topic3_3_par1">
        No Lúpus, além do FAN, outros autoanticorpos podem ser encontrados, como o anti-Sm e o
        anti-DNA. Outros indícios de presença de uma doença autoimune são: baixo número de glóbulos
        brancos (leucopenia), baixo número de plaquetas (plaquetopenia) e anemia, que podem ser
        encontrados no hemograma. Os valores dos complementos (C3 e C4) também podem estar baixos.\n
    </string>
    <string name="hint_gender">Gênero</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_type">Tipo de usuário</string>
    <string name="male">Masculino</string>
    <string name="female">Feminino</string>
    <string name="gender_other">Outra ident.</string>
    <string name="type_other">Outro tipo</string>
    <string name="parent">Familiar</string>
    <string name="patient">Paciente</string>
    <string name="hint_age">Idade</string>
    <string name="hint_register">Entrar</string>
    <string name="logout">Sair</string>
    <string name="about">Sobre o Lupi</string>
</resources>