<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nuvem_palavras"
        android:icon="@drawable/ic_cloud"
        android:title="@string/nuvem_de_palavras" />
    <item
        android:id="@+id/o_que_e"
        android:icon="@mipmap/ic_chevron_right_white_24dp"
        android:title="@string/o_que_lupus" />

    <item android:id="@+id/o_que_causa"
        android:icon="@mipmap/ic_chevron_right_white_24dp"
        android:title="@string/o_que_causa_lupus"/>

    <item android:id="@+id/como_e_diagnosticado"
        android:icon="@mipmap/ic_chevron_right_white_24dp"
        android:title="@string/como_e_diagnosticado"/>

    <item android:id="@+id/como_afeta_corpo"
        android:icon="@mipmap/ic_chevron_right_white_24dp"
        android:title="@string/como_afeta_corpo"/>

    <item android:id="@+id/como_vou_melhorar"
        android:icon="@mipmap/ic_chevron_right_white_24dp"
        android:title="@string/como_vou_melhorar"/>

    <item android:id="@+id/como_sera_dia_a_dia"
        android:icon="@mipmap/ic_chevron_right_white_24dp"
        android:title="@string/como_sera_dia_a_dia"/>

    <item android:id="@+id/logout"
        android:icon="@drawable/ic_person"
        android:title="@string/logout"/>

    <item android:id="@+id/about"
        android:icon="@drawable/ic_about"
        android:title="@string/about"/>
</menu>