<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/hintname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingRight="8dp"
        android:text="@string/hint_name"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="50dp" />

    <TextView
        android:id="@+id/gender_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingRight="8dp"
        android:text="@string/hint_gender"
        android:textSize="20dp"/>

    <RadioGroup
        android:id="@+id/gender_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/gender_textview"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/male_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:checked="true"
            android:text="@string/male" />

        <RadioButton
            android:id="@+id/female_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/female" />

        <RadioButton
            android:id="@+id/other_radio_btn"
            android:layout_width="113dp"
            android:layout_height="45dp"
            android:text="@string/gender_other" />

    </RadioGroup>


    <TextView
        android:id="@+id/user_type_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingRight="8dp"
        android:text="@string/hint_type"
        android:textSize="20dp"/>

    <RadioGroup
        android:id="@+id/type_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/type_textview"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/patient_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:checked="true"
            android:text="@string/patient" />

        <RadioButton
            android:id="@+id/parent_radio_btn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:text="@string/parent" />

        <RadioButton
            android:id="@+id/othertype_radio_btn"
            android:layout_width="113dp"
            android:layout_height="45dp"
            android:text="@string/type_other" />

    </RadioGroup>

    <TextView
        android:id="@+id/hintage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:paddingRight="8dp"
        android:text="@string/hint_age"
        android:textSize="20dp"/>


    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="90"
        android:inputType="number" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/hint_register" />
</LinearLayout>
